welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:20: error: missing parameter type
	case_ => fini=true
        ^